Updating sample project to use latest swagger-maven-plugin
