# generated/swagger-ui/swagger.json
@@ -18,68 +18,16 @@
   "host" : "petstore.swagger.wordnik.com",
   "basePath" : "/api",
   "tags" : [ {
-    "name" : "store"
-  }, {
     "name" : "pet"
   }, {
-    "name" : "TestingController"
-  }, {
     "name" : "user"
+  }, {
+    "name" : "store"
+  }, {
+    "name" : "TestingController"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
-    "/pet" : {
-      "post" : {
-        "tags" : [ "pet" ],
-        "summary" : "Add a new pet to the store",
-        "description" : "",
-        "operationId" : "addPet",
-        "consumes" : [ "application/xml", "application/json" ],
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Pet object that needs to be added to the store",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/Pet"
-          }
-        } ],
-        "responses" : {
-          "405" : {
-            "description" : "Invalid input"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "pet" ],
-        "summary" : "Update an existing pet",
-        "description" : "",
-        "operationId" : "updatePet",
-        "consumes" : [ "application/xml", "application/json" ],
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Pet object that needs to be added to the store",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/Pet"
-          }
-        } ],
-        "responses" : {
-          "400" : {
-            "description" : "Invalid ID supplied"
-          },
-          "404" : {
-            "description" : "Pet not found"
-          },
-          "405" : {
-            "description" : "Validation exception"
-          }
-        }
-      }
-    },
     "/pet/findByStatus" : {
       "get" : {
         "tags" : [ "pet" ],
@@ -91,13 +39,22 @@
           "name" : "status",
           "in" : "query",
           "description" : "Status values that need to be considered for filter",
-          "required" : false,
+          "required" : true,
           "type" : "array",
-          "collectionFormat" : "multi"
+          "items" : {
+            "type" : "string"
+          },
+          "collectionFormat" : "csv"
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/Pet"
+              }
+            }
           },
           "400" : {
             "description" : "Invalid status value"
@@ -116,13 +73,22 @@
           "name" : "tags",
           "in" : "query",
           "description" : "Tags to filter by",
-          "required" : false,
+          "required" : true,
           "type" : "array",
-          "collectionFormat" : "multi"
+          "items" : {
+            "type" : "string"
+          },
+          "collectionFormat" : "csv"
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/Pet"
+              }
+            }
           },
           "400" : {
             "description" : "Invalid tag value"
@@ -147,7 +113,10 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Pet"
+            }
           },
           "400" : {
             "description" : "Invalid ID supplied"
@@ -173,18 +142,10 @@
         }, {
           "in" : "body",
           "name" : "body",
-          "description" : "Updated name of the pet",
+          "description" : "Updated pet object",
           "required" : false,
           "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Updated status of the pet",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
+            "$ref" : "#/definitions/Pet"
           }
         } ],
         "responses" : {
@@ -202,8 +163,7 @@
         "parameters" : [ {
           "name" : "apiKey",
           "in" : "header",
-          "description" : "",
-          "required" : false,
+          "required" : true,
           "type" : "string",
           "default" : ""
         }, {
@@ -221,45 +181,6 @@
         }
       }
     },
-    "/pet/{petId}/uploadImage" : {
-      "post" : {
-        "tags" : [ "pet" ],
-        "summary" : "uploads an image",
-        "description" : "",
-        "operationId" : "uploadFile",
-        "consumes" : [ "multipart/form-data" ],
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "petId",
-          "in" : "path",
-          "description" : "ID of pet to update",
-          "required" : true,
-          "type" : "integer",
-          "format" : "int64"
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Additional data to pass to server",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "body",
-          "name" : "body",
-          "description" : "file detail",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/MultipartFile"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
     "/store/inventory" : {
       "get" : {
         "tags" : [ "store" ],
@@ -269,7 +190,14 @@
         "produces" : [ "application/xml", "application/json" ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "object",
+              "additionalProperties" : {
+                "type" : "integer",
+                "format" : "int32"
+              }
+            }
           }
         }
       }
@@ -292,7 +220,10 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Order"
+            }
           },
           "400" : {
             "description" : "Invalid Order"
@@ -316,7 +247,10 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Order"
+            }
           },
           "400" : {
             "description" : "Invalid ID supplied"
@@ -345,29 +279,6 @@
           },
           "404" : {
             "description" : "Order not found"
-          }
-        }
-      }
-    },
-    "/user" : {
-      "post" : {
-        "tags" : [ "user" ],
-        "summary" : "Create user",
-        "description" : "This can only be done by the logged in user.",
-        "operationId" : "createUser",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Created user object",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/User"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
           }
         }
       }
@@ -435,18 +346,21 @@
           "name" : "username",
           "in" : "query",
           "description" : "The user name for login",
-          "required" : false,
+          "required" : true,
           "type" : "string"
         }, {
           "name" : "password",
           "in" : "query",
           "description" : "The password for login in clear text",
-          "required" : false,
+          "required" : true,
           "type" : "string"
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "string"
+            }
           },
           "400" : {
             "description" : "Invalid username/password supplied"
@@ -484,7 +398,10 @@
         } ],
         "responses" : {
           "200" : {
-            "description" : "successful operation"
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/User"
+            }
           },
           "400" : {
             "description" : "Invalid username supplied"
@@ -554,6 +471,14 @@
         "description" : "",
         "operationId" : "getPaginatedPets",
         "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/PagingHelper"
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "successful operation",
@@ -572,6 +497,7 @@
   },
   "definitions" : {
     "Category" : {
+      "type" : "object",
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -582,41 +508,8 @@
         }
       }
     },
-    "InputStream" : {
-      "type" : "object"
-    },
-    "MultipartFile" : {
-      "properties" : {
-        "name" : {
-          "type" : "string"
-        },
-        "bytes" : {
-          "type" : "array",
-          "items" : {
-            "type" : "string",
-            "format" : "byte"
-          }
-        },
-        "empty" : {
-          "type" : "boolean",
-          "default" : false
-        },
-        "size" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "inputStream" : {
-          "$ref" : "#/definitions/InputStream"
-        },
-        "contentType" : {
-          "type" : "string"
-        },
-        "originalFilename" : {
-          "type" : "string"
-        }
-      }
-    },
     "Order" : {
+      "type" : "object",
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -645,7 +538,19 @@
         }
       }
     },
+    "PagingHelper" : {
+      "type" : "object",
+      "properties" : {
+        "limit" : {
+          "type" : "string"
+        },
+        "offset" : {
+          "type" : "string"
+        }
+      }
+    },
     "Pet" : {
+      "type" : "object",
       "required" : [ "name", "photoUrls" ],
       "properties" : {
         "id" : {
@@ -678,6 +583,7 @@
       }
     },
     "Tag" : {
+      "type" : "object",
       "properties" : {
         "id" : {
           "type" : "integer",
@@ -689,6 +595,7 @@
       }
     },
     "User" : {
+      "type" : "object",
       "properties" : {
         "id" : {
           "type" : "integer",
