# src/main/java/com/github/who/examples/swaggermavenplugin/controller/PetController.java
@@ -3,11 +3,11 @@ package com.github.who.examples.swaggermavenplugin.controller;
 import com.github.who.examples.swaggermavenplugin.model.Pet;
 import java.io.File;
 
-import com.wordnik.swagger.annotations.Api;
-import com.wordnik.swagger.annotations.ApiOperation;
-import com.wordnik.swagger.annotations.ApiParam;
-import com.wordnik.swagger.annotations.ApiResponse;
-import com.wordnik.swagger.annotations.ApiResponses;
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -29,139 +29,93 @@ import static org.springframework.http.MediaType.*;
 @RequestMapping(value = "/pet", produces = {APPLICATION_JSON_VALUE})
 @Api(value = "/pet", description = "the pet API")
 public class PetController {
-  
 
-  @ApiOperation(value = "Update an existing pet", notes = "", response = Void.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 405, message = "Validation exception"),
-    @ApiResponse(code = 404, message = "Pet not found"),
-    @ApiResponse(code = 400, message = "Invalid ID supplied") })
-  @RequestMapping(value = "", 
-    produces = { "application/json", "application/xml" }, 
-    consumes = { "application/json", "application/xml",  },
-    method = RequestMethod.PUT)
-  public ResponseEntity<Void> updatePet(@ApiParam(value = "Pet object that needs to be added to the store"  ) Pet body)
-      {
-      // do some magic!
-      return new ResponseEntity<Void>(HttpStatus.OK);
-  }
+    @ApiOperation(value = "Update an existing pet", notes = "", response = Void.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 405, message = "Validation exception"),
+        @ApiResponse(code = 404, message = "Pet not found"),
+        @ApiResponse(code = 400, message = "Invalid ID supplied")})
+    @RequestMapping(value = "",
+            produces = {"application/json", "application/xml"},
+            consumes = {"application/json", "application/xml",},
+            method = RequestMethod.PUT)
+    public ResponseEntity<Void> updatePet(@ApiParam(value = "Pet object that needs to be added to the store") Pet body) {
+        // do some magic!
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
 
-  
+    @ApiOperation(value = "Add a new pet to the store", notes = "", response = Void.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 405, message = "Invalid input")})
+    @RequestMapping(value = "",
+            produces = {"application/json", "application/xml"},
+            consumes = {"application/json", "application/xml",},
+            method = RequestMethod.POST)
+    public ResponseEntity<Void> addPet(@ApiParam(value = "Pet object that needs to be added to the store") Pet body) {
+        // do some magic!
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
 
-  @ApiOperation(value = "Add a new pet to the store", notes = "", response = Void.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 405, message = "Invalid input") })
-  @RequestMapping(value = "", 
-    produces = { "application/json", "application/xml" }, 
-    consumes = { "application/json", "application/xml",  },
-    method = RequestMethod.POST)
-  public ResponseEntity<Void> addPet(@ApiParam(value = "Pet object that needs to be added to the store"  ) Pet body)
-      {
-      // do some magic!
-      return new ResponseEntity<Void>(HttpStatus.OK);
-  }
+    @ApiOperation(value = "Finds Pets by status", notes = "Multiple status values can be provided with comma seperated strings", response = Pet.class, responseContainer = "List")
+    @ApiResponses(value = {
+        @ApiResponse(code = 200, message = "successful operation"),
+        @ApiResponse(code = 400, message = "Invalid status value")})
+    @RequestMapping(value = "/findByStatus",
+            produces = {"application/json", "application/xml"},
+            method = RequestMethod.GET)
+    public ResponseEntity<Pet> findPetsByStatus(@ApiParam(value = "Status values that need to be considered for filter") @RequestParam("status") List<String> status) {
+        // do some magic!
+        return new ResponseEntity<Pet>(HttpStatus.OK);
+    }
 
-  
+    @ApiOperation(value = "Finds Pets by tags", notes = "Muliple tags can be provided with comma seperated strings. Use tag1, tag2, tag3 for testing.", response = Pet.class, responseContainer = "List")
+    @ApiResponses(value = {
+        @ApiResponse(code = 200, message = "successful operation"),
+        @ApiResponse(code = 400, message = "Invalid tag value")})
+    @RequestMapping(value = "/findByTags",
+            produces = {"application/json", "application/xml"},
+            method = RequestMethod.GET)
+    public ResponseEntity<Pet> findPetsByTags(@ApiParam(value = "Tags to filter by") @RequestParam("tags") List<String> tags) {
+        // do some magic!
+        return new ResponseEntity<Pet>(HttpStatus.OK);
+    }
 
-  @ApiOperation(value = "Finds Pets by status", notes = "Multiple status values can be provided with comma seperated strings", response = Pet.class, responseContainer = "List")
-  @ApiResponses(value = { 
-    @ApiResponse(code = 200, message = "successful operation"),
-    @ApiResponse(code = 400, message = "Invalid status value") })
-  @RequestMapping(value = "/findByStatus", 
-    produces = { "application/json", "application/xml" }, 
-    
-    method = RequestMethod.GET)
-  public ResponseEntity<Pet> findPetsByStatus(@ApiParam(value = "Status values that need to be considered for filter") @RequestParam("status") List<String> status)
-      {
-      // do some magic!
-      return new ResponseEntity<Pet>(HttpStatus.OK);
-  }
+    @ApiOperation(value = "Find pet by ID", notes = "Returns a pet when ID < 10.  ID > 10 or nonintegers will simulate API error conditions", response = Pet.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 404, message = "Pet not found"),
+        @ApiResponse(code = 200, message = "successful operation"),
+        @ApiResponse(code = 400, message = "Invalid ID supplied")})
+    @RequestMapping(value = "/{petId}",
+            produces = {"application/json", "application/xml"},
+            method = RequestMethod.GET)
+    public ResponseEntity<Pet> getPetById(@ApiParam(value = "ID of pet that needs to be fetched", required = true) @PathVariable("petId") Long petId) {
+        // do some magic!
+        return new ResponseEntity<Pet>(HttpStatus.OK);
+    }
 
-  
+    @ApiOperation(value = "Updates a pet in the store with form data", notes = "", response = Void.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 405, message = "Invalid input")})
+    @RequestMapping(value = "/{petId}",
+            produces = {"application/json", "application/xml"},
+            consumes = {"application/x-www-form-urlencoded",},
+            method = RequestMethod.POST)
+    public ResponseEntity<Void> updatePetWithForm(
+            @ApiParam(value = "ID of pet that needs to be updated", required = true) @PathVariable("petId") String petId,
+            @ApiParam(value = "Updated pet object") @RequestPart("pet") Pet pet) {
+        // do some magic!
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
 
-  @ApiOperation(value = "Finds Pets by tags", notes = "Muliple tags can be provided with comma seperated strings. Use tag1, tag2, tag3 for testing.", response = Pet.class, responseContainer = "List")
-  @ApiResponses(value = { 
-    @ApiResponse(code = 200, message = "successful operation"),
-    @ApiResponse(code = 400, message = "Invalid tag value") })
-  @RequestMapping(value = "/findByTags", 
-    produces = { "application/json", "application/xml" }, 
-    
-    method = RequestMethod.GET)
-  public ResponseEntity<Pet> findPetsByTags(@ApiParam(value = "Tags to filter by") @RequestParam("tags") List<String> tags)
-      {
-      // do some magic!
-      return new ResponseEntity<Pet>(HttpStatus.OK);
-  }
-
-  
-
-  @ApiOperation(value = "Find pet by ID", notes = "Returns a pet when ID < 10.  ID > 10 or nonintegers will simulate API error conditions", response = Pet.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 404, message = "Pet not found"),
-    @ApiResponse(code = 200, message = "successful operation"),
-    @ApiResponse(code = 400, message = "Invalid ID supplied") })
-  @RequestMapping(value = "/{petId}", 
-    produces = { "application/json", "application/xml" }, 
-    
-    method = RequestMethod.GET)
-  public ResponseEntity<Pet> getPetById(@ApiParam(value = "ID of pet that needs to be fetched",required=true ) @PathVariable("petId") Long petId)
-      {
-      // do some magic!
-      return new ResponseEntity<Pet>(HttpStatus.OK);
-  }
-
-  
-
-  @ApiOperation(value = "Updates a pet in the store with form data", notes = "", response = Void.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 405, message = "Invalid input") })
-  @RequestMapping(value = "/{petId}", 
-    produces = { "application/json", "application/xml" }, 
-    consumes = { "application/x-www-form-urlencoded",  },
-    method = RequestMethod.POST)
-  public ResponseEntity<Void> updatePetWithForm(@ApiParam(value = "ID of pet that needs to be updated",required=true ) @PathVariable("petId") String petId,
-    
-@ApiParam(value = "Updated name of the pet" )@RequestPart("name")  String name,
-    
-@ApiParam(value = "Updated status of the pet" )@RequestPart("status")  String status)
-      {
-      // do some magic!
-      return new ResponseEntity<Void>(HttpStatus.OK);
-  }
-
-  
-
-  @ApiOperation(value = "Deletes a pet", notes = "", response = Void.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 400, message = "Invalid pet value") })
-  @RequestMapping(value = "/{petId}", 
-    produces = { "application/json", "application/xml" }, 
-    
-    method = RequestMethod.DELETE)
-  public ResponseEntity<Void> deletePet(@ApiParam(value = ""  )@RequestHeader("apiKey") String apiKey,
-    @ApiParam(value = "Pet id to delete",required=true ) @PathVariable("petId") Long petId)
-      {
-      // do some magic!
-      return new ResponseEntity<Void>(HttpStatus.OK);
-  }
-
-  
-
-  @ApiOperation(value = "uploads an image", notes = "", response = Void.class)
-  @ApiResponses(value = { 
-    @ApiResponse(code = 0, message = "successful operation") })
-  @RequestMapping(value = "/{petId}/uploadImage", 
-    produces = { "application/json", "application/xml" }, 
-    consumes = { "multipart/form-data",  },
-    method = RequestMethod.POST)
-  public ResponseEntity<Void> uploadFile(@ApiParam(value = "ID of pet to update",required=true ) @PathVariable("petId") Long petId,
-    
-@ApiParam(value = "Additional data to pass to server" )@RequestPart("additionalMetadata")  String additionalMetadata,
-    @ApiParam(value = "file detail") @RequestPart("file") MultipartFile fileDetail)
-      {
-      // do some magic!
-      return new ResponseEntity<Void>(HttpStatus.OK);
-  }
-
-  
+    @ApiOperation(value = "Deletes a pet", notes = "", response = Void.class)
+    @ApiResponses(value = {
+        @ApiResponse(code = 400, message = "Invalid pet value")})
+    @RequestMapping(value = "/{petId}",
+            produces = {"application/json", "application/xml"},
+            method = RequestMethod.DELETE)
+    public ResponseEntity<Void> deletePet(@ApiParam(value = "") @RequestHeader("apiKey") String apiKey,
+            @ApiParam(value = "Pet id to delete", required = true) @PathVariable("petId") Long petId) {
+        // do some magic!
+        return new ResponseEntity<Void>(HttpStatus.OK);
+    }
 }
